--- a/main.html
+++ b/main.html
@@ -2,20 +2,35 @@
 <html lang = "en">
     <head>
         <title>Suyeon Yang</title>
+        <link rel="stylesheet" type="text/css" href="css/main.css">
     </head>
-     <body>
-        <div id = "navigation bar">
+    <header>
+        <div id = "header">
+            <div id = "logo">
+                <img src="" alt="logo">
+            </div>
+            <div id = "navigation bar">
             <ul>
-                <li><img</li>
-                <li>home</li>
-                <li>about</li>
-                <li>projects</li>
-                <li>contact</li>
+                <li><a>home</a></li>
+                <li><a>about</a></li>
+                <li><a>projects</a></li>
+                <li><a>contact</a></li>
             </ul>
+            </div>
         </div>
-        <div id = "contents">
-            
+    </header>
+     <body>
+        <main>
+        <div id = "background image">
+            <img src="hawaii-large.jpg" alt="main image">
+        </div>
+        <div id = "main contents">
+            <p></p>
         </div>
 
+        </main>
      </body>
+     <footer>
+
+     </footer>
 </html>
