--- a/project.html
+++ b/project.html
@@ -3,8 +3,11 @@
     <head>
         <title>Suyeon Yang</title>
     </head>
-     <body>
-        <div id = "navigation bar">
+    <header>
+        <div id = "header">
+            <div id = "logo">
+            </div>
+            <div id = "navigation bar">
             <ul>
                 <li><img</li>
                 <li>home</li>
@@ -12,10 +15,17 @@
                 <li>projects</li>
                 <li>contact</li>
             </ul>
+            </div>
         </div>
+    </header>
+     <body>
+        <main>
         <div id = "contents">
             
         </div>
-
+        </main>
      </body>
+     <footer>
+
+     </footer>
 </html>
