header and footer

--- a/main.html
+++ b/main.html
@@ -4,33 +4,33 @@
         <title>Suyeon Yang</title>
         <link rel="stylesheet" type="text/css" href="css/main.css">
     </head>
-    <header>
-        <div id = "header">
-            <div id = "logo">
-                <img src="" alt="logo">
-            </div>
-            <div id = "navigation bar">
-            <ul>
-                <li><a>home</a></li>
-                <li><a>about</a></li>
-                <li><a>projects</a></li>
-                <li><a>contact</a></li>
-            </ul>
-            </div>
-        </div>
-    </header>
      <body>
+            <header>
+                    <div id = "header">
+                        
+                        <nav>
+                        <ul>
+                            <li class="logo"><a>Suyeon Yang</a></li>
+                            <li><a>Home</a></li>
+                            <li><a>About</a></li>
+                            <li><a>Projects</a></li>
+                            <li><a>Contact</a></li>
+                        </ul>
+                        </nav>
+                    </div>
+                </header>
         <main>
         <div id = "background image">
-            <img src="hawaii-large.jpg" alt="main image">
+            <img src="images/hawaii-large.jpg" alt="main image">
         </div>
         <div id = "main contents">
-            <p></p>
+            <p>Entity Software Engineer</p>
         </div>
 
         </main>
      </body>
      <footer>
+        <p>Contact information: <a href="suyeonyang03@gmail.com">suyeonyang03@gmail.com</a></p>
 
      </footer>
 </html>
