--- a/main.html
+++ b/main.html
@@ -5,16 +5,14 @@
         <link rel="stylesheet" type="text/css" href="css/main.css">
     </head>
      <body>
-            <header>
-                    <div id = "header">
-                        
+            <header>    
                         <nav>
                         <ul>
-                            <li class="logo"><a>Suyeon Yang</a></li>
-                            <li><a>Home</a></li>
-                            <li><a>About</a></li>
-                            <li><a>Projects</a></li>
+                            <li class="logo">Suyeon Yang</li>
                             <li><a>Contact</a></li>
+                            <li><a>Projects</a></li>
+                            <li><a>About</a></li>
+                            <li><a>Home</a></li>
                         </ul>
                         </nav>
                     </div>
@@ -30,7 +28,7 @@
         </main>
      </body>
      <footer>
-        <p>Contact information: <a href="suyeonyang03@gmail.com">suyeonyang03@gmail.com</a></p>
+        <p class = "footer">SUYEON YANG ©2019</p>
 
      </footer>
 </html>
