--- a/main.html
+++ b/main.html
@@ -9,21 +9,18 @@
                         <nav>
                         <ul>
                             <li class="logo">Suyeon Yang</li>
-                            <li><a>Contact</a></li>
-                            <li><a>Projects</a></li>
-                            <li><a>About</a></li>
-                            <li><a>Home</a></li>
+                            <li><a href="/contact.html">Contact</a></li>
+                            <li><a href="/project.html">Projects</a></li>
+                            <li><a href="/aboutMe.html">About</a></li>
+                            <li><a href="/main.html">Home</a></li>
                         </ul>
                         </nav>
                     </div>
                 </header>
         <main>
-        <div id = "background image">
-            <img src="images/hawaii-large.jpg" alt="main image">
-        </div>
-        <div id = "main contents">
-            <p>Entity Software Engineer</p>
-        </div>
+        
+            <p id = "main_paragraph">Entity Software Engineer</p>
+      
 
         </main>
      </body>
