--- a/project.html
+++ b/project.html
@@ -2,30 +2,33 @@
 <html lang = "en">
     <head>
         <title>Suyeon Yang</title>
+        <link rel="stylesheet" type="text/css" href="css/main.css">
     </head>
-    <header>
-        <div id = "header">
-            <div id = "logo">
-            </div>
-            <div id = "navigation bar">
-            <ul>
-                <li><img</li>
-                <li>home</li>
-                <li>about</li>
-                <li>projects</li>
-                <li>contact</li>
-            </ul>
-            </div>
-        </div>
-    </header>
      <body>
+            <header>    
+                        <nav>
+                        <ul>
+                            <li class="logo">Suyeon Yang</li>
+                            <li><a href="/contact.html">Contact</a></li>
+                            <li><a href="/project.html">Projects</a></li>
+                            <li><a href="/aboutMe.html">About</a></li>
+                            <li><a href="/main.html">Home</a></li>
+                        </ul>
+                        </nav>
+                    </div>
+                </header>
         <main>
-        <div id = "contents">
+        <div id = "main_contents">
+            <ul>
+                <li>calculator app(android)</li>
+            </ul>
             
         </div>
+
         </main>
      </body>
      <footer>
+        <p class = "footer">SUYEON YANG ©2019</p>
 
      </footer>
 </html>
