--- a/aboutMe.html
+++ b/aboutMe.html
@@ -2,24 +2,33 @@
 <html lang = "en">
     <head>
         <title>Suyeon Yang</title>
-        <link rel="stylesheet" type="text/css" href="css/main.css">
+        <link rel="stylesheet" type="text/css" href="css/aboutMe.css">
     </head>
      <body>
             <header>    
                         <nav>
-                        <ul>
+                        <ul id = "menu">
                             <li class="logo">Suyeon Yang</li>
-                            <li><a href="/contact.html">Contact</a></li>
-                            <li><a href="/project.html">Projects</a></li>
-                            <li><a href="/aboutMe.html">About</a></li>
-                            <li><a href="/main.html">Home</a></li>
+                            <li id = "menu_list"><a href="/contact.html">Contact</a></li>
+                            <li id = "menu_list"><a href="/project.html">Projects</a></li>
+                            <li id = "menu_list"><a href="/aboutMe.html">About</a></li>
+                            <li id = "menu_list"><a href="/main.html">Home</a></li>
                         </ul>
                         </nav>
                     </div>
                 </header>
         <main>
-        <div id = "main_contents">
-            <ul></ul>
+         <div id = "main_contents">
+            <ul id = "main_list">
+                <li>
+                    <ul id = "information"> 
+                     <li>About Me</li>
+                     <li>I am a software engineer.</li>
+
+                    </ul>
+                </li>
+                <li><img src= "images/hawaii-large.jpg" id = "profile"></li>
+            </ul>
             
         </div>
 
