--- a/main.html
+++ b/main.html
@@ -7,19 +7,19 @@
      <body>
             <header>    
                         <nav>
-                        <ul>
+                        <ul id = "menu">
                             <li class="logo">Suyeon Yang</li>
-                            <li><a href="/contact.html">Contact</a></li>
-                            <li><a href="/project.html">Projects</a></li>
-                            <li><a href="/aboutMe.html">About</a></li>
-                            <li><a href="/main.html">Home</a></li>
+                            <li id = "menu_list"><a href="/contact.html">Contact</a></li>
+                            <li id = "menu_list"><a href="/project.html">Projects</a></li>
+                            <li id = "menu_list"><a href="/aboutMe.html">About</a></li>
+                            <li id = "menu_list"><a href="/main.html">Home</a></li>
                         </ul>
                         </nav>
                     </div>
                 </header>
         <main>
         
-            <p id = "main_paragraph">Entity Software Engineer</p>
+            <p id = "main_paragraph">Software Engineer</p>
       
 
         </main>
