--- a/aboutMe.html
+++ b/aboutMe.html
@@ -21,11 +21,8 @@
          <div id = "main_contents">
             <ul id = "main_list">
                 <li>
-                    <ul id = "information"> 
-                     <li>About Me</li>
-                     <li>I am a software engineer.</li>
-
-                    </ul>
+                    <p id= "information">About Me<br>
+                     I am a software engineer.</p>
                 </li>
                 <li><img src= "images/hawaii-large.jpg" id = "profile"></li>
             </ul>
