--- a/aboutMe.html
+++ b/aboutMe.html
@@ -19,13 +19,12 @@
                 </header>
         <main>
          <div id = "main_contents">
-            <ul id = "main_list">
-                <li>
-                    <p id= "information">About Me<br>
+             <div id = "intro_words">
+                    <h1>About Me</h1>
+                    <p id= "information">
                      I am a software engineer.</p>
-                </li>
-                <li><img src= "images/hawaii-large.jpg" id = "profile"></li>
-            </ul>
+             </div>
+            <img src= "images/hawaii-large.jpg" id = "profile">
             
         </div>
 
