--- a/project.html
+++ b/project.html
@@ -2,17 +2,17 @@
 <html lang = "en">
     <head>
         <title>Suyeon Yang</title>
-        <link rel="stylesheet" type="text/css" href="css/main.css">
+        <link rel="stylesheet" type="text/css" href="css/project.css">
     </head>
      <body>
             <header>    
                         <nav>
-                        <ul>
+                        <ul id = "menu">
                             <li class="logo">Suyeon Yang</li>
-                            <li><a href="/contact.html">Contact</a></li>
-                            <li><a href="/project.html">Projects</a></li>
-                            <li><a href="/aboutMe.html">About</a></li>
-                            <li><a href="/main.html">Home</a></li>
+                            <li id = "menu_list"><a href="/contact.html">Contact</a></li>
+                            <li id = "menu_list"><a href="/project.html">Projects</a></li>
+                            <li id = "menu_list"><a href="/aboutMe.html">About</a></li>
+                            <li id = "menu_list"><a href="/main.html">Home</a></li>
                         </ul>
                         </nav>
                     </div>
