project html and css

--- a/project.html
+++ b/project.html
@@ -19,13 +19,16 @@
                 </header>
         <main>
         <div id = "main_contents">
-            <ul>
-                <li>calculator app(android)</li>
+        <ul id = "list">
+            <ul id = "project_list">
+                <li><img src = "images/hawaii-large.jpg" id = "cal"></li>
+                <li id = "project_desc">calculator app(android)</li>
             </ul>
+        </ul>
             
         </div>
 
-        </main>
+    </main>
      </body>
      <footer>
         <p class = "footer">SUYEON YANG ©2019</p>
