--- a/contact.html
+++ b/contact.html
@@ -2,25 +2,35 @@
 <html lang = "en">
     <head>
         <title>Suyeon Yang</title>
-        <link rel="stylesheet" type="text/css" href="css/main.css">
+        <link rel="stylesheet" type="text/css" href="css/contact.css">
     </head>
      <body>
             <header>    
                         <nav>
-                        <ul>
+                        <ul id = "menu">
                             <li class="logo">Suyeon Yang</li>
-                            <li><a href="/contact.html">Contact</a></li>
-                            <li><a href="/project.html">Projects</a></li>
-                            <li><a href="/aboutMe.html">About</a></li>
-                            <li><a href="/main.html">Home</a></li>
+                            <li id = "menu_list"><a href="/contact.html">Contact</a></li>
+                            <li id = "menu_list"><a href="/project.html">Projects</a></li>
+                            <li id = "menu_list"><a href="/aboutMe.html">About</a></li>
+                            <li id = "menu_list"><a href="/main.html">Home</a></li>
                         </ul>
                         </nav>
                     </div>
                 </header>
         <main>
         <div id = "main_contents">
-            <ul>
-                <li></li>
+            <ul id = "contact_ul">
+                <li id = "contact_list">
+                    <h2>Contact</h2>
+                    <li id = "contact_list">
+                    <a href = "https://www.linkedin.com/in/suyeonyang/" ><img src = "/images/linkedin.png" alt = "linkedin" id = "contact_image"></a></li>
+                    <li id = "contact_list">
+                    <a href = "https://github.com/suyeony" ><img src = "/images/cat.png" alt = "github" id = "contact_image"></a></li>
+                    <li id = "contact_list">
+                    <a href = "" ><img src = "/images/gmail.png" alt = "gmail" id = "contact_image"></a></li>
+                    <li id = "contact_list">
+                    <a href = "https://www.facebook.com/"><img src = "/images/facebook.png" alt = "facebook" id = "contact_image"></a></li>
+                </li>
             </ul>
             
         </div>
