--- a/contact.html
+++ b/contact.html
@@ -20,17 +20,17 @@
         <main>
         <div id = "main_contents">
             <ul id = "contact_ul">
-                <li id = "contact_list">
-                    <h2>Contact</h2>
-                    <li id = "contact_list">
+                <li class = "contact_list">
+                    <h1>Contact</h1></li>
+                    <li class = "contact_list">
                     <a href = "https://www.linkedin.com/in/suyeonyang/" ><img src = "/images/linkedin.png" alt = "linkedin" id = "contact_image"></a></li>
-                    <li id = "contact_list">
+                    <li class = "contact_list">
                     <a href = "https://github.com/suyeony" ><img src = "/images/cat.png" alt = "github" id = "contact_image"></a></li>
-                    <li id = "contact_list">
+                    <li class = "contact_list">
                     <a href = "" ><img src = "/images/gmail.png" alt = "gmail" id = "contact_image"></a></li>
-                    <li id = "contact_list">
+                    <li class = "contact_list">
                     <a href = "https://www.facebook.com/"><img src = "/images/facebook.png" alt = "facebook" id = "contact_image"></a></li>
-                </li>
+               
             </ul>
             
         </div>
