--- a/project.html
+++ b/project.html
@@ -21,7 +21,7 @@
         <div id = "main_contents">
       
             <ul id = "project_list">
-                <li id = "projects"><img src = "images/hawaii-large.jpg" id = "cal">
+                <li id = "projects"><img src = "images/androidApp.jpg" id = "cal">
                  <p id = "project_desc">calculator app(android)</p></li>
                  <li id = "projects"><img src = "images/hawaii-large.jpg" id = "cal">
                     <p id = "project_desc">calculator app(android)</p></li>
