--- a/contact.html
+++ b/contact.html
@@ -19,9 +19,8 @@
                 </header>
         <main>
         <div id = "main_contents">
+            <h1>Contact</h1>
             <ul id = "contact_ul">
-                <li class = "contact_list">
-                    <h1>Contact</h1></li>
                     <li class = "contact_list">
                     <a href = "https://www.linkedin.com/in/suyeonyang/" ><img src = "/images/linkedin.png" alt = "linkedin" id = "contact_image"></a></li>
                     <li class = "contact_list">
